cluster/manifests/lab/argocd-dex-server-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.3
    helm.sh/chart: argo-cd-10.9.6
  name: argocd-dex-server
  namespace: argocd
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: argocd
          app.kubernetes.io/name: argocd-server
    ports:
    - port: http
      protocol: TCP
    - port: grpc
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-dex-server
  policyTypes:
  - Ingress
